# spinner

./: .gitignore  Cargo.toml  README.md  justfile
circuit/: main.circom  merkle.circom  package.json  prove.js
tumbler/: Cargo.toml
tumbler/src/: hash.rs  lib.rs  merkle.rs  tumbler.rs
