[package]
name = "spinner"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
blake2 = "0.10.6"
ff_ce = "0.11"
hex = "0.4.3"
num-bigint = { version = "0.4.6", features = ["serde"] }
num-traits = "0.2.19"
poseidon-rs = "0.0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
